tests/cases/fail/dict_membership_left_type.p4
def main() -> None:
    colors: dict[str, str] = {"apple": "red"}
    print(1 in colors)
